# cse455_hw1

./: CMakeLists.txt  README.md
src/: filter_image.c  image.h  resize_image.c  test.c
